[tool.poetry]
name = "ocdc"
version = "0.4.0"
description = 'A changelog formatter for "people", neat freaks, and sloppy typists.'
authors = ["Matteo De Wint <matteo@mailfence.com>"]
packages = [{ include = "ocdc" }]
license = "MIT"
readme = "README.md"
repository = "https://github.com/mdwint/ocdc"
keywords = ["changelog", "markdown", "formatter"]

[tool.poetry.scripts]
ocdc = "ocdc.__main__:main"

[tool.poetry.dependencies]
packaging = "^23.1"
pydantic = "^2.0.2"
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^23.7.0"
bump2version = "^1.0.1"
coverage = "^7.2.7"
flake8 = "^5.0.4"
isort = "^5.12.0"
mypy = "^1.4.1"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
